--- a/css/gc.css
+++ b/css/gc.css
@@ -595,7 +595,7 @@
 
 .navigation-item {
   margin-left: 32px;
-  padding: 10px 0px 5px;
+  padding: 4px 0px 5px;
   background-color: transparent;
   opacity: 1;
   font-family: synthese, sans-serif;
